--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Boka utvändig Fönsterputs - Fast pris 250 kr</title>
 
     <!-- Open Graph metataggar -->
-    <meta property="og:title" content="Boka utvändig Fönsterputs - Fast pris 250kr">
+    <meta property="og:title" content="Boka utvändig Fönsterputs - Fast pris 250kr för hela huset!">
     <meta property="og:description" content="Boka din fönsterputsning idag för bara 250 kr efter RUT-avdrag!">
-    <meta property="og:image" content="https://i.imgur.com/sb9uZwT.png"> <!-- Bildlänk till din logga -->
+    <meta property="og:image" content="https://i.imgur.com/LWr4TnI.png"> <!-- Bildlänk till din logga -->
     <meta property="og:url" content="https://si5193.github.io/pk/"> <!-- Din hemsidas URL -->
     <meta property="og:type" content="website">
 
@@ -200,7 +200,7 @@
 
         <!-- Fast pris information -->
         <div class="price-info">
-            Fast pris för utvändig fönsterputsning: 250 kr efter RUT-avdrag
+            Fast pris för utvändig fönsterputsning: endast 250 kr efter RUT-avdrag för hela huset!
         </div>
 
         <!-- Bokningsformulär -->
