--- a/index.html
+++ b/index.html
@@ -23,19 +23,17 @@
 
     <style>
         /* Bakgrundsbild inställningar */
-      body {
-    font-family: 'Poppins', sans-serif;
-    background: url('https://images.pexels.com/photos/756903/pexels-photo-756903.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2') no-repeat center center fixed; 
-    background-size: cover; /* Se till att bilden täcker hela skärmen */
-    background-repeat: no-repeat; /* Förhindrar att bilden upprepas */
-    background-attachment: fixed; /* Håller bakgrunden fast vid scroll */
-    padding: 20px;
-}
+        body {
+            font-family: 'Poppins', sans-serif;
+            background: url('https://images.pexels.com/photos/756903/pexels-photo-756903.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2') no-repeat center center fixed; 
+            background-size: cover; /* Se till att bilden täcker hela skärmen */
+            padding: 20px;
+        }
 
         .container {
             max-width: 600px;
             margin: 0 auto;
-            background: rgba(255, 255, 255, 0.9); /* Vit bakgrund med transparens för att låta bakgrunden synas lite */
+            background: rgba(255, 255, 255, 0.9); /* Vit bakgrund med transparens */
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -67,14 +65,12 @@
             background-color: #218838;
         }
 
-        /* Loggan */
         .logo {
             display: block;
             margin: 0 auto 20px;
             max-width: 150px;
         }
 
-        /* Bekräftelsemeddelande */
         #confirmation {
             display: none;
             text-align: center;
@@ -86,13 +82,12 @@
             border-radius: 5px;
         }
 
-        /* Snygga checkboxar som knappar */
         .extra-services {
-            margin-top: 40px; /* Ökat avstånd till föregående fält */
+            margin-top: 40px;
             display: flex;
             justify-content: center;
-            gap: 20px; /* Avstånd mellan knappar */
-            margin-bottom: 30px; /* Mellanrum till nästa fält */
+            gap: 20px;
+            margin-bottom: 30px;
         }
 
         .checkbox-button {
@@ -117,7 +112,7 @@
             background-color: #36b8eb;
             color: white;
             border-color: #37b8eb;
-            box-shadow: 0px 0px 15px rgba(0, 128, 0, 0.4); /* Skuggning vid markerat */
+            box-shadow: 0px 0px 15px rgba(0, 128, 0, 0.4);
         }
 
         .checkbox-button:hover {
@@ -139,7 +134,6 @@
             color: #333;
         }
 
-        /* Villkor länk - Blå, centrerad och klickbar */
         .terms-link {
             text-align: center;
             margin-top: 20px;
@@ -152,7 +146,6 @@
             color: #0056b3;
         }
 
-        /* Modal-stil */
         .modal {
             display: none;
             position: fixed;
@@ -190,15 +183,15 @@
         }
 
         .custom-checkbox-container {
-    display: flex;
-    align-items: center;  /* Vertikal centrering av checkboxen och texten */
-    gap: 10px;  /* Mellanrum mellan checkboxen och texten */
-}
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
 
-.custom-checkbox-label {
-    margin: 0;  /* Tar bort eventuell marginal på etiketten */
-    font-weight: bold;
-}
+        .custom-checkbox-label {
+            margin: 0;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -228,24 +221,6 @@
                 <input type="text" id="address" name="address" class="form-control" placeholder="Din adress" required>
             </div>
 
-            <!-- Stad -->
-            <div class="form-group">
-                <label for="city">Stad:</label>
-                <input type="text" id="city" name="city" class="form-control" placeholder="Din stad" required>
-            </div>
-
-            <!-- Postnummer -->
-            <div class="form-group">
-                <label for="postcode-modal">Postnummer:</label>
-                <input type="text" id="postcode-modal" name="postcode" class="form-control" placeholder="Ditt postnummer" required>
-            </div>
-
-            <!-- Personnummer för RUT -->
-            <div class="form-group">
-                <label for="ssn">Personnummer för RUT-avdraget:</label>
-                <input type="text" id="ssn" name="ssn" class="form-control" placeholder="Ditt personnummer" required>
-            </div>
-
             <!-- Fönstertyp (Dropdown) -->
             <div class="form-group">
                 <label for="window-type">Typ av fönster:</label>
@@ -262,7 +237,7 @@
                 Vill du lägga till något extra? <br> (Tillkommer utöver kampanjen)
             </div>
 
-            <!-- Extra tjänster (Snygga checkboxar som knappar) -->
+            <!-- Extra tjänster -->
             <div class="extra-services">
                 <div class="checkbox-button" id="uterum-button">
                     <input type="checkbox" id="uterum-veranda" name="extra_services_uterum" value="Ja">
@@ -276,41 +251,14 @@
                 </div>
             </div>
 
-            <!-- E-post -->
+            <!-- Invändig putsning -->
             <div class="form-group">
-                <label for="email">E-post:</label>
-                <input type="email" id="email" name="email" class="form-control" placeholder="Din e-post" required>
+                <label for="internal-cleaning">Är du intresserad av invändig fönsterputsning?</label>
+                <div class="custom-checkbox-container">
+                    <input type="checkbox" id="internal-cleaning" name="internal_cleaning" value="Ja">
+                    <label for="internal-cleaning" class="custom-checkbox-label">Ja, jag vill bli kontaktad för invändig putsning</label>
+                </div>
             </div>
-
-            <!-- Telefon -->
-            <div class="form-group">
-                <label for="phone">Telefon:</label>
-                <input type="tel" id="phone" name="phone" class="form-control" placeholder="Ditt telefonnummer" required>
-            </div>
-
-            <!-- Kommentar (extra information) -->
-            <div class="form-group">
-                <label for="comments">Kommentarer:</label>
-                <textarea id="comments" name="comments" class="form-control" rows="4" placeholder="T.ex. Har en hund, extra information..."></textarea>
-            </div>
-
-            <!-- Värva en vän/närstående -->
-            <div class="form-group">
-                <label for="friend-name">Värva en vän/närstående och få 15% rabatt på nästa puts:</label>
-                <input type="text" id="friend-name" name="friend_name" class="form-control" placeholder="Vännens namn">
-            </div>
-
-            <div class="form-group">
-                <input type="tel" id="friend-phone" name="friend_phone" class="form-control" placeholder="Vännens telefonnummer">
-            </div>
-
-            <div class="form-group">
-    <label for="internal-cleaning">Är du intresserad av invändig fönsterputsning?</label>
-    <div class="custom-checkbox-container">
-        <input type="checkbox" id="internal-cleaning" name="internal_cleaning" value="Ja">
-        <label for="internal-cleaning" class="custom-checkbox-label">Ja, jag vill bli kontaktad för invändig putsning</label>
-    </div>
-</div>
 
             <!-- Bekräftelseknapp -->
             <div class="form-group text-center">
@@ -332,12 +280,12 @@
         <div class="modal-content">
             <span class="close">&times;</span>
             <h2>Villkor</h2>
-            <p>1. Du bokar automatiskt upp dig för löpande fönsterputsning. (Rena rutor året om)</p>
-            <p>2. Du kan närsomhelst avsluta/pausa fönsterputsningen. Det finns således ingen uppsägningstid eller bindningstid.</p>
-            <p>3. Ditt pris första gången är 250:-. Vi räknar sedan ut fortsatt pris efter första putsningen.</p>
-            <p>4. I erbjudandet ingår fönsterputsning upp till 30 rutor. Sedan tillkommer en kostnad med 14:- per fönster efter RUT-avdrag.</p>
-            <p>5. Uterum och övervåning är tilläggstjänster och kostar extra utöver de 250:- som kampanjen är på.</p>
-            <p>6. Vi putsar dina rutor ungerfär var 8:e vecka. Detta blir ca 6 tillfällen per år.</p>
+            <p>1. Du bokar automatiskt upp dig för löpande fönsterputsning.</p>
+            <p>2. Du kan närsomhelst avsluta/pausa fönsterputsningen.</p>
+            <p>3. Ditt pris första gången är 250 kr. Vi räknar sedan ut fortsatt pris efter första putsningen.</p>
+            <p>4. I erbjudandet ingår fönsterputsning upp till 30 rutor. Därefter tillkommer 14 kr per fönster.</p>
+            <p>5. Uterum och övervåning är tilläggstjänster som kostar extra utöver de 250 kr.</p>
+            <p>6. Vi putsar dina rutor ungefär var 8:e vecka.</p>
         </div>
     </div>
 
@@ -357,9 +305,11 @@
         $('#myForm').on('submit', function(event) {
             event.preventDefault(); // Hindra siduppdatering
 
-            // Hämta formulärdata
             var formData = new FormData(this);
 
+            formData.set('extra_services_uterum', $('#uterum-veranda').prop('checked') ? 'Ja' : 'Nej');
+            formData.set('extra_services_ovanvaning', $('#ovanvaning').prop('checked') ? 'Ja' : 'Nej');
+            formData.set('internal_cleaning', $('#internal-cleaning').prop('checked') ? 'Ja' : 'Nej');
 
             formData.append('service_id', 'service_9gfg81a');  // Ditt Service ID
             formData.append('template_id', 'template_5c722qi');  // Ditt Template ID
@@ -369,14 +319,11 @@
             $.ajax('https://api.emailjs.com/api/v1.0/email/send-form', {
                 type: 'POST',
                 data: formData,
-                contentType: false, // Auto-detection
-                processData: false // Ingen behov att omvandla formData till sträng
+                contentType: false, 
+                processData: false 
             }).done(function() {
-                // Visa bekräftelsemeddelande
                 $('#confirmation').show();
-                // Återställ formuläret
                 $('#myForm')[0].reset();
-                // Avmarkera knapparna
                 $('.checkbox-button').removeClass('active');
             }).fail(function(error) {
                 alert('Ett fel uppstod vid bokningen. Försök igen.');
@@ -388,17 +335,14 @@
         var btn = document.getElementById('termsLink');
         var span = document.getElementsByClassName('close')[0];
 
-        // När användaren klickar på "Villkor" visas modalen
         btn.onclick = function() {
             modal.style.display = 'block';
         }
 
-        // När användaren klickar på stäng (x) döljs modalen
         span.onclick = function() {
             modal.style.display = 'none';
         }
 
-        // Om användaren klickar utanför modalen stängs den
         window.onclick = function(event) {
             if (event.target == modal) {
                 modal.style.display = 'none';
@@ -406,8 +350,6 @@
         }
     </script>
 
-    <!-- Bootstrap JS (valfritt) -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
 </body>
 </html>
