--- a/index.html
+++ b/index.html
@@ -22,18 +22,27 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <style>
-        /* Bakgrundsbild inställningar */
-        body {
+        /* Videobakgrund inställningar */
+        body, html {
+            height: 100%;
+            margin: 0;
+            padding: 0;
             font-family: 'Poppins', sans-serif;
-            background: url('https://images.pexels.com/photos/756903/pexels-photo-756903.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2') no-repeat center center fixed; 
-            background-size: cover; /* Se till att bilden täcker hela skärmen */
-            padding: 20px;
+        }
+
+        .video-background {
+            position: fixed;
+            right: 0;
+            bottom: 0;
+            min-width: 100%;
+            min-height: 100%;
+            z-index: -1; /* Sätt videon bakom allt innehåll */
         }
 
         .container {
             max-width: 600px;
             margin: 0 auto;
-            background: rgba(255, 255, 255, 0.9); /* Vit bakgrund med transparens */
+            background: rgba(255, 255, 255, 0.9); /* Vit bakgrund med transparens för att låta videon synas lite */
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -65,12 +74,14 @@
             background-color: #218838;
         }
 
+        /* Loggan */
         .logo {
             display: block;
             margin: 0 auto 20px;
             max-width: 150px;
         }
 
+        /* Bekräftelsemeddelande */
         #confirmation {
             display: none;
             text-align: center;
@@ -82,12 +93,13 @@
             border-radius: 5px;
         }
 
+        /* Snygga checkboxar som knappar */
         .extra-services {
-            margin-top: 40px;
+            margin-top: 40px; /* Ökat avstånd till föregående fält */
             display: flex;
             justify-content: center;
-            gap: 20px;
-            margin-bottom: 30px;
+            gap: 20px; /* Avstånd mellan knappar */
+            margin-bottom: 30px; /* Mellanrum till nästa fält */
         }
 
         .checkbox-button {
@@ -112,7 +124,7 @@
             background-color: #36b8eb;
             color: white;
             border-color: #37b8eb;
-            box-shadow: 0px 0px 15px rgba(0, 128, 0, 0.4);
+            box-shadow: 0px 0px 15px rgba(0, 128, 0, 0.4); /* Skuggning vid markerat */
         }
 
         .checkbox-button:hover {
@@ -134,6 +146,7 @@
             color: #333;
         }
 
+        /* Villkor länk - Blå, centrerad och klickbar */
         .terms-link {
             text-align: center;
             margin-top: 20px;
@@ -146,6 +159,7 @@
             color: #0056b3;
         }
 
+        /* Modal-stil */
         .modal {
             display: none;
             position: fixed;
@@ -184,17 +198,23 @@
 
         .custom-checkbox-container {
             display: flex;
-            align-items: center;
-            gap: 10px;
+            align-items: center;  /* Vertikal centrering av checkboxen och texten */
+            gap: 10px;  /* Mellanrum mellan checkboxen och texten */
         }
 
         .custom-checkbox-label {
-            margin: 0;
+            margin: 0;  /* Tar bort eventuell marginal på etiketten */
             font-weight: bold;
         }
     </style>
 </head>
 <body>
+
+    <!-- Videobakgrund -->
+    <video autoplay muted loop class="video-background">
+        <source src="https://videos.pexels.com/video-files/1777892/1777892-hd_1280_720_25fps.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 
     <div class="container">
         <!-- Logotyp -->
@@ -221,6 +241,24 @@
                 <input type="text" id="address" name="address" class="form-control" placeholder="Din adress" required>
             </div>
 
+            <!-- Stad -->
+            <div class="form-group">
+                <label for="city">Stad:</label>
+                <input type="text" id="city" name="city" class="form-control" placeholder="Din stad" required>
+            </div>
+
+            <!-- Postnummer -->
+            <div class="form-group">
+                <label for="postcode-modal">Postnummer:</label>
+                <input type="text" id="postcode-modal" name="postcode" class="form-control" placeholder="Ditt postnummer" required>
+            </div>
+
+            <!-- Personnummer för RUT -->
+            <div class="form-group">
+                <label for="ssn">Personnummer för RUT-avdraget:</label>
+                <input type="text" id="ssn" name="ssn" class="form-control" placeholder="Ditt personnummer" required>
+            </div>
+
             <!-- Fönstertyp (Dropdown) -->
             <div class="form-group">
                 <label for="window-type">Typ av fönster:</label>
@@ -237,7 +275,7 @@
                 Vill du lägga till något extra? <br> (Tillkommer utöver kampanjen)
             </div>
 
-            <!-- Extra tjänster -->
+            <!-- Extra tjänster (Snygga checkboxar som knappar) -->
             <div class="extra-services">
                 <div class="checkbox-button" id="uterum-button">
                     <input type="checkbox" id="uterum-veranda" name="extra_services_uterum" value="Ja">
@@ -251,7 +289,35 @@
                 </div>
             </div>
 
-            <!-- Invändig putsning -->
+            <!-- E-post -->
+            <div class="form-group">
+                <label for="email">E-post:</label>
+                <input type="email" id="email" name="email" class="form-control" placeholder="Din e-post" required>
+            </div>
+
+            <!-- Telefon -->
+            <div class="form-group">
+                <label for="phone">Telefon:</label>
+                <input type="tel" id="phone" name="phone" class="form-control" placeholder="Ditt telefonnummer" required>
+            </div>
+
+            <!-- Kommentar (extra information) -->
+            <div class="form-group">
+                <label for="comments">Kommentarer:</label>
+                <textarea id="comments" name="comments" class="form-control" rows="4" placeholder="T.ex. Har en hund, extra information..."></textarea>
+            </div>
+
+            <!-- Värva en vän/närstående -->
+            <div class="form-group">
+                <label for="friend-name">Värva en vän/närstående och få 15% rabatt på nästa puts:</label>
+                <input type="text" id="friend-name" name="friend_name" class="form-control" placeholder="Vännens namn">
+            </div>
+
+            <div class="form-group">
+                <input type="tel" id="friend-phone" name="friend_phone" class="form-control" placeholder="Vännens telefonnummer">
+            </div>
+
+            <!-- Intresse för invändig fönsterputsning -->
             <div class="form-group">
                 <label for="internal-cleaning">Är du intresserad av invändig fönsterputsning?</label>
                 <div class="custom-checkbox-container">
@@ -280,12 +346,12 @@
         <div class="modal-content">
             <span class="close">&times;</span>
             <h2>Villkor</h2>
-            <p>1. Du bokar automatiskt upp dig för löpande fönsterputsning.</p>
-            <p>2. Du kan närsomhelst avsluta/pausa fönsterputsningen.</p>
-            <p>3. Ditt pris första gången är 250 kr. Vi räknar sedan ut fortsatt pris efter första putsningen.</p>
-            <p>4. I erbjudandet ingår fönsterputsning upp till 30 rutor. Därefter tillkommer 14 kr per fönster.</p>
-            <p>5. Uterum och övervåning är tilläggstjänster som kostar extra utöver de 250 kr.</p>
-            <p>6. Vi putsar dina rutor ungefär var 8:e vecka.</p>
+            <p>1. Du bokar automatiskt upp dig för löpande fönsterputsning. (Rena rutor året om)</p>
+            <p>2. Du kan närsomhelst avsluta/pausa fönsterputsningen. Det finns således ingen uppsägningstid eller bindningstid.</p>
+            <p>3. Ditt pris första gången är 250:-. Vi räknar sedan ut fortsatt pris efter första putsningen.</p>
+            <p>4. I erbjudandet ingår fönsterputsning upp till 30 rutor. Sedan tillkommer en kostnad med 14:- per fönster efter RUT-avdrag.</p>
+            <p>5. Uterum och övervåning är tilläggstjänster och kostar extra utöver de 250:- som kampanjen är på.</p>
+            <p>6. Vi putsar dina rutor ungerfär var 8:e vecka. Detta blir ca 6 tillfällen per år.</p>
         </div>
     </div>
 
@@ -305,11 +371,8 @@
         $('#myForm').on('submit', function(event) {
             event.preventDefault(); // Hindra siduppdatering
 
+            // Hämta formulärdata
             var formData = new FormData(this);
-
-            formData.set('extra_services_uterum', $('#uterum-veranda').prop('checked') ? 'Ja' : 'Nej');
-            formData.set('extra_services_ovanvaning', $('#ovanvaning').prop('checked') ? 'Ja' : 'Nej');
-            formData.set('internal_cleaning', $('#internal-cleaning').prop('checked') ? 'Ja' : 'Nej');
 
             formData.append('service_id', 'service_9gfg81a');  // Ditt Service ID
             formData.append('template_id', 'template_5c722qi');  // Ditt Template ID
@@ -319,11 +382,14 @@
             $.ajax('https://api.emailjs.com/api/v1.0/email/send-form', {
                 type: 'POST',
                 data: formData,
-                contentType: false, 
-                processData: false 
+                contentType: false, // Auto-detection
+                processData: false // Ingen behov att omvandla formData till sträng
             }).done(function() {
+                // Visa bekräftelsemeddelande
                 $('#confirmation').show();
+                // Återställ formuläret
                 $('#myForm')[0].reset();
+                // Avmarkera knapparna
                 $('.checkbox-button').removeClass('active');
             }).fail(function(error) {
                 alert('Ett fel uppstod vid bokningen. Försök igen.');
@@ -335,14 +401,17 @@
         var btn = document.getElementById('termsLink');
         var span = document.getElementsByClassName('close')[0];
 
+        // När användaren klickar på "Villkor" visas modalen
         btn.onclick = function() {
             modal.style.display = 'block';
         }
 
+        // När användaren klickar på stäng (x) döljs modalen
         span.onclick = function() {
             modal.style.display = 'none';
         }
 
+        // Om användaren klickar utanför modalen stängs den
         window.onclick = function(event) {
             if (event.target == modal) {
                 modal.style.display = 'none';
@@ -350,6 +419,8 @@
         }
     </script>
 
+    <!-- Bootstrap JS (valfritt) -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </body>
 </html>
