--- a/index.html
+++ b/index.html
@@ -211,10 +211,11 @@
 <body>
 
     <!-- Videobakgrund -->
-    <video autoplay muted loop class="video-background">
-        <source src="https://videos.pexels.com/video-files/1777892/1777892-hd_1280_720_25fps.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+<video autoplay muted loop playsinline class="video-background">
+    <source src="https://videos.pexels.com/video-files/1777892/1777892-hd_1280_720_25fps.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
+
 
     <div class="container">
         <!-- Logotyp -->
