--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             <span class="close-confirmation">&times;</span>
             <div class="confirmation-icon">✔️</div>
             <h3>Bokning genomförd!</h3>
-            <p>Tack för din bokning! Vi kommer att kontakta dig snart för att bekräfta detaljerna.</p>
+            <p>Tack för din bokning!</p>
             <p>Vi putsar dina fönster inom 1-4 veckor. Du kommer att få ett meddelande innan vi kommer.</p>
             <p><strong>Behöver du hjälp?</strong> Kontakta oss på <a href="tel:+46723158632">072-3158632</a>.</p>
 
